--- a/introduction.tex
+++ b/introduction.tex
@@ -166,7 +166,7 @@ below:
   \item We describe an implementation of \quark as a light-weight shim
     layer on top of Scylla -- an off-the-shelf distributed key-value
     store~\cite{scylla}. We evaluate the implementation on a
-    collaborative-editing benchmark to demonstrate novel tradeoffs
+    collaborative-editing benchmark to demonstrate novel trade-offs
     presented by our approach.
 \end{itemize}
 
