--- a/quark.tex
+++ b/quark.tex
@@ -212,6 +212,8 @@
 
 \input{implementation}
 
+\input{evaluation}
+
 
 %% Acknowledgments
 \begin{acks}                            %% acks environment is optional
