--- a/mydefs.tex
+++ b/mydefs.tex
@@ -211,7 +211,7 @@ morekeywords={oper, txn, invariant, module, begin, match, when, @@deriving, not,
 \newcommand{\Pow}[1]{\mathcal{P}\left(#1\right)}
 \renewcommand{\bar}[1]{\overline{#1}}
 \renewcommand{\merge}{\diamond}
-\newcommand{\quark}{{\sc Quark}\xspace}
+\newcommand{\quark}{{\sc Carmot}\xspace}
 \newcommand{\hlabel}[1]{\begin{hypothesis}\label{#1}\end{hypothesis}\ref{#1}}
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\entails}{\vDash}
