--- a/quark.tex
+++ b/quark.tex
@@ -214,6 +214,8 @@
 
 \input{evaluation}
 
+\input{related}
+
 
 %% Acknowledgments
 \begin{acks}                            %% acks environment is optional
